--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,10 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.6"
 activityCompose = "1.9.3"
 composeBom = "2024.04.01"
+roomCommon = "2.6.1"
+roomCompiler = "2.6.1"
+roomKtx = "2.6.1"
+roomRuntime = "2.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -26,10 +30,14 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 # ROOM Database
-androidx-room-common = { group = "androidx.room", name = "room-common" }
-androidx-room-ktx = { group = "androidx.room", name = "room-ktx" }
-androidx-room-runtime = { group = "androidx.room", name = "room-runtime" }
-androidx-room-compiler = { group = "androidx.room", name = "room-compiler" }
+#androidx-room-common = { group = "androidx.room", name = "room-common" }
+#androidx-room-ktx = { group = "androidx.room", name = "room-ktx" }
+#androidx-room-runtime = { group = "androidx.room", name = "room-runtime" }
+#androidx-room-compiler = { group = "androidx.room", name = "room-compiler" }
+room-common = { module = "androidx.room:room-common", version.ref = "roomCommon" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 
 ## Coroutines
 #Kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android"}
