--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,26 @@
         android:theme="@style/Theme.AdaptiveMail"
         tools:targetApi="31">
         <activity
+            android:name=".activities.SendMailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_send_mail"
+            android:theme="@style/Theme.AdaptiveMail" />
+        <activity
+            android:name=".activities.ViewMailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_view_mail"
+            android:theme="@style/Theme.AdaptiveMail" />
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.AdaptiveMail" />
+        <activity
+            android:name=".activities.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.AdaptiveMail" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
